[fix/guten-data-spacing] set margin & padding to 0

--- a/src/assets/frontend.scss
+++ b/src/assets/frontend.scss
@@ -48,6 +48,8 @@
 .guten-data[class="guten-data"] {
 	width: 0 !important;
 	height: 0 !important;
+	padding: 0 !important;
+	margin: 0 !important;
 }
 
 // Hide block that has animation until animation is loaded
